--- a/newnote_1554891543972.html
+++ b/newnote_1554891543972.html
@@ -1,1 +1,1 @@
-<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-d8feba7e-8c09-40fd-b160-6c8ea18d4213"></attachment><ul data-checked="false"><li>垂直电商中150条数据转换以后遗漏，查</li></ul><p><br></p>
+<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-d8feba7e-8c09-40fd-b160-6c8ea18d4213"></attachment><ul data-checked="false"><li>垂直电商中150条数据转换之后遗漏，查看车商汇表中是否存在该数据</li></ul><p><br></p>
