--- a/newnote_1556008372137.html
+++ b/newnote_1556008372137.html
@@ -1,1 +1,1 @@
-<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-88731adf-cdda-4151-ad8a-9c4b34aac01d"></attachment><ul data-checked="false"><li> 新增经销商club_dealer管理模块</li><li>操作文档以及sql的准备，</li><li><br></li></ul><p><br></p>
+<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-88731adf-cdda-4151-ad8a-9c4b34aac01d"></attachment><ul data-checked="false"><li> 新增经销商club_dealer管理模块</li><li>操作文档以及sql的准备，ds和mc</li></ul><p> </p><ul data-checked="false"><li><br></li></ul><p><br></p>
