--- a/newnote_1557057667307.html
+++ b/newnote_1557057667307.html
@@ -1,1 +1,1 @@
-<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-901fedda-5fda-4a9a-b6fa-1169cb9bee46"></attachment><ul data-checked="false"><li> 和data确认经销商列表是否对应</li><li> 119的channel_code</li></ul><p><br></p>
+<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-901fedda-5fda-4a9a-b6fa-1169cb9bee46"></attachment><ul data-checked="false"><li> 和data确认经销商列表是否对应</li><li> 119的channel_code</li><li> MGM前端经销商的更新</li><li> 经销商退网的uat</li><li> 951的优化</li></ul><p><br></p>
