--- a/newnote_1558352017789.html
+++ b/newnote_1558352017789.html
@@ -1,1 +1,1 @@
-<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-c5c998a5-12df-45d4-9b0b-a5839c9605a1"></attachment><p><br></p><p><br></p>
+<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-c5c998a5-12df-45d4-9b0b-a5839c9605a1"></attachment><p><br></p><ul data-checked="false"><li>认证接口的确认</li><li>DMS订单文件的处理和联调</li><li>经销商优化逻辑的确认</li></ul><p><br></p>
