--- a/newnote_1559546101388.html
+++ b/newnote_1559546101388.html
@@ -1,1 +1,1 @@
-<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-69f02df5-018a-4eb1-9571-cc0effc2837f"></attachment><ul data-checked="false"><li> oracle时间戳类型的使用，可以通过to_timestmp ，也可以直接通过sysdate赋值</li><li> </li><li>tuma永久方案</li><li>功能开发</li><li><br></li></ul><p><br></p>
+<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-69f02df5-018a-4eb1-9571-cc0effc2837f"></attachment><ul data-checked="false"><li> oracle时间戳类型的使用，可以通过to_timestmp ，也可以直接通过sysdate赋值</li><li> </li><li>tuma永久方案--电信号段</li></ul><p><br></p>
