--- a/newnote_1560773630648.html
+++ b/newnote_1560773630648.html
@@ -1,1 +1,1 @@
-<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-9c40cc0e-9763-4cf1-931e-772bf82b837e"></attachment><p><br></p><ul data-checked="false"><li>测试report生成的文件，data是否可以用。然后进行日期格式的修改或者</li></ul><p><br></p>
+<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-9c40cc0e-9763-4cf1-931e-772bf82b837e"></attachment><p><br></p><ul data-checked="false"><li>测试report生成的文件，data是否可以用。然后进行日期格式的修改或者其他的方法</li></ul><p><br></p>
